[package]
name = "jppe"
version = "1.1.0"
authors = [
    "jankincai <jankincai12@gmail.com>"
]
edition = "2021"
description = "This is a byte stream structured serialization and deserialization library."
repository = "https://github.com/caizhengxin/jppe-rs"
homepage = "https://github.com/caizhengxin/jppe-rs"
readme = "README.md"
# https://crates.io/category_slugs
categories = [
    "encoding",
    "parser-implementations",
]
keywords = [
    "jppe-rs",
    "byte",
    "serialization",
    "parsing",
    "stream",
]
license = "MIT OR Apache-2.0"
include = [
    "src/*",
    "benches/*",
    "examples/*",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
]
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "derive",
    "crates/jget-rs",
    "crates/jget-rs/derive",
    "crates/jdefault-rs",
]

[features]
default = ["std"]
derive = ["jppe_derive"]
jdefault = ["jdefault_derive"]
full = [
    "jppe_derive",
    "jdefault_derive",
    "jget",
    "serde"
]
std = ["jkcenum/std"]

[dependencies]
jppe_derive = { path = "derive", version = "1.1.0", optional = true }
jdefault_derive = { path = "crates/jdefault-rs", version = "0", optional = true }
jget = { path = "crates/jget-rs", version = "0", features = ["derive"], optional = true }
serde = { version = "1.0", default-features = false, optional = true }
thiserror-no-std = "2.0"
jkcenum = { version = "0.3.2", default-features = false, features = ["derive"] }

[dev-dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jppe_derive = { path = "derive", version = "1.1.0" }
jget = { path = "crates/jget-rs", version = "0", features = ["derive"] }
jdefault_derive = { path = "crates/jdefault-rs", version = "0" }
