[package]
name = "jdefault_derive"
version = "0.1.0"
authors = [
    "jankincai <jankincai12@gmail.com>"
]
edition = "2021"
description = "Rust default derive."
repository = "https://github.com/caizhengxin/jdefault"
homepage = "https://github.com/caizhengxin/jdefault"
readme = "README.md"
# https://crates.io/category_slugs
categories = [
    "development-tools",
]
keywords = [
    "jdefault",
]
license = "MIT OR Apache-2.0"
include = [
    "src/*",
    "examples/*",
    "Cargo.toml",
    "LICENSE*",
    "README.md",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
virtue = "0.0"
